--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+
+
+# ======================================
+# = SPRING H2 DB JPA CONFIGURATION HERE
+# ======================================
+ spring.datasource.platform=h2
+ spring.datasource.url=jdbc:h2:mem:springjavascript
+ spring.datasource.driverClassName=org.h2.Driver
+ spring.datasource.username=sa
+ spring.datasource.password=
+ spring.h2.console.enabled=true
+ spring.jpa.hibernate.ddl-auto=create-drop
+ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
